making the changes globally
